few more tweaks

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business HTML5 Template</title>
+    <title>Sweez</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,6 +33,10 @@
 <!-- Swiper JS -->
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -191,7 +195,7 @@
                 </div>
                 <div class="service-content">
                   <h4>Market Analysis</h4>
-                  <p>Our Market Analysis service delivers essential insights into industry trends, competitor strategies, and consumer behavior. We provide intelligence to help you navigate market complexities and seize growth opportunities.</p>
+                  <p>Our Market Analysis service delivers essential insights into industry trends, competitors' strategies, and consumers' behavior. We provide intelligence to help you navigate market complexities and seize growth opportunities.</p>
                   <a href="services.html" class="read-more-text">Learn More</a>
                 </div>
               </div>
@@ -206,7 +210,7 @@
                 </div>
                 <div class="service-content">
                   <h4>Accounting Services</h4>
-                  <p>Our Accounting Service streamlines financial management with solutions like bookkeeping, reporting, payroll, and tax preparation. We ensure your records are accurate and compliant, allowing you to focus on growth.</p>
+                  <p>Our Accounting Service streamlines financial management with solutions like bookkeeping, reporting, and payroll. We ensure your records are accurate and compliant, allowing you to focus on growth.</p>
                   <a href="services.html" class="read-more-text">Learn More</a>
                 </div>
               </div>
@@ -222,7 +226,7 @@
                 <div class="service-content">
                   <h4>Forensic Accounting</h4>
                   <p>Our Forensic Accounting service combines investigative expertise with accounting skills to uncover financial irregularities and prevent fraud. 
-                    We analyze financial records, detect discrepancies, and provide reports for legal proceedings.</p>
+                    We analyze financial records, detect discrepancies, and provide reports for fund recovery.</p>
                   <a href="services.html" class="read-more-text">Learn More</a>
                 </div>
               </div>
@@ -234,7 +238,7 @@
                 </div>
                 <div class="service-content">
                   <h4>Due Diligence Procurement</h4>
-                  <p>Our Due Diligence Procurement service vet suppliers and vendors through thorough background checks and financial assessments. We help you mitigate risks and build a reliable supply chain for sustainable growth.</p>
+                  <p>Our Due Diligence Procurement service vets suppliers and vendors through thorough background checks and financial assessments. We help you mitigate risks and build a reliable supply chain for sustainable growth.</p>
                   <a href="services.html" class="read-more-text">Learn More</a>
                 </div>
               </div>
@@ -617,9 +621,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
-            
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            <p>Copyright &copy; 2024 Sweez Nigeria Company.
           </div>
         </div>
       </div>
