--- a/services.html
+++ b/services.html
@@ -119,17 +119,17 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-8">
             <section class='tabs-content'>
               <article id='tabs-4'>
-                <img src="assets/images/single_service_04.jpg" alt="">
+                <!-- <img src="assets/images/single_service_04.jpg" alt=""> -->
                 <h4>Business Health Check</h4>
-                <p>Our Business Health Check service provides a comprehensive evaluation of your company’s financial and operational performance. We assess key metrics such as cash flow, profitability, and efficiency, identifying strengths and areas for improvement.  
+                <p>Our Business Health Check service provides a comprehensive evaluation of your company’s financial and operational performance. We assess key metrics and efficiency, identifying strengths and areas for improvement.  
                 <br><br>By offering actionable insights, we help you optimize operations, reduce risks, and ensure long-term business success. Whether you're preparing for growth or navigating challenges, our health check will keep your business on the right track.</p>
               </article>
               
               <article id='tabs-1'>
-                <img src="assets/images/single_service_01.jpg" alt="">
+                <!-- <img src="assets/images/single_service_01.jpg" alt=""> -->
                 <h4>Market Analysis</h4>
                 <p>In today's rapidly evolving business landscape, understanding market trends and customer behavior is critical for success. Our Market Analysis service provides in-depth research and data-driven insights to help you navigate complex market conditions. 
-                <br><br>We analyze key industry trends, competitor strategies, and consumer preferences, delivering actionable intelligence that empowers you to make informed decisions. Whether you're exploring new opportunities or optimizing your current operations, our tailored analysis will ensure your business stays ahead of the curve and capitalizes on growth potential.</p>
+                <br><br>We analyze key industry trends, competitors' strategies, and consumers' preferences, delivering actionable intelligence that empowers you to make informed decisions. Whether you're exploring new opportunities or optimizing your current operations, our tailored analysis will ensure your business stays ahead of the curve and capitalizes on growth potential.</p>
               </article>
               <!-- <article id='tabs-2'>
                 <img src="assets/images/single_service_02.jpg" alt="">
@@ -138,10 +138,10 @@ https://templatemo.com/tm-545-finance-business
                 <br><br>Our expert team ensures that you have the data you need to manage risks, optimize cash flow, and drive profitability. With our solutions, you'll gain the financial clarity to confidently grow your business.</p>
               </article> -->
               <article id='tabs-3'>
-                <img src="assets/images/single_service_03.jpg" alt="">
+                <!-- <img src="assets/images/single_service_03.jpg" alt=""> -->
                 <h4>Accounting Service</h4>
-                <p>Our Accounting Service is designed to help businesses maintain accurate financial records while staying compliant with industry standards and regulations. We offer a full range of accounting solutions, including bookkeeping, financial reporting, payroll management, and tax preparation. With a focus on precision and transparency, our team ensures your financial data is up-to-date and organized, enabling you to focus on growing your business. 
-                <br><br>Whether you're a small startup or an established enterprise, we provide the expertise and personalized support to streamline your accounting processes and improve financial decision-making.</p>
+                <p>Our Accounting Service is designed to help businesses maintain accurate financial records while staying compliant with industry standards and regulations. We offer a full range of accounting solutions, including bookkeeping, financial reporting and payroll management. With a focus on precision and transparency, our team ensures your financial data is up-to-date and organized, enabling you to focus on growing your business. 
+                <br><br>Whether you are a small startup or an established enterprise, we provide the expertise and personalized support to streamline your accounting processes and improve financial decision-making.</p>
               </article>
               
             </section>
@@ -155,8 +155,8 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Request a <em>call back</em></h2>
-              <span>interdum nisl ac urna tempor mollis</span>
+              <h2>Send us a <em>message</em></h2>
+              <span>Let us know how we can help your business thrive.</span>
             </div>
           </div>
           <div class="col-md-12">
@@ -217,7 +217,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-3 footer-item">
             <h4>Finance Business</h4>
-            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
+            <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia pien vitae.</p>
             <ul class="social-icons">
               <li><a rel="nofollow" href="https://fb.com/templatemo" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
