--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Send us a <em>message</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+              <span>Let us know how we can help your business thrive.</span>
             </div>
           </div>
           <div class="col-md-12">
