--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business - Contact Page</title>
+    <title>Sweez - Contact Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-8 col-xs-12">
             <ul class="left-info">
               <li><a href="#"><i class="fa fa-clock-o"></i>Mon-Fri 09:00-17:00</a></li>
-              <li><a href="#"><i class="fa fa-phone"></i>090-080-0760</a></li>
+              <li><a href="#"><i class="fa fa-phone"></i>+234 818 1759 372</a></li>
             </ul>
           </div>
           <div class="col-md-4">
@@ -64,7 +64,7 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Finance Business</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Sweez</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -112,15 +112,15 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-phone"></i>
               <h4>Phone</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
-              <a href="#">090-080-0760</a>
+              <p >Feel free to call us with any questions or to learn more about our services.</p>
+              <a href="#">+234-818-1759-372 <br> +234-802-3672-299 <br> +234-916-2776-064</a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="contact-item">
               <i class="fa fa-envelope"></i>
               <h4>Email</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
+              <p>Reach out to us via email for inquiries, feedback, or to schedule a consultation.</p>
               <a href="#">info@company.com</a>
             </div>
           </div>
@@ -128,7 +128,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-map-marker"></i>
               <h4>Location</h4>
-              <p>1020 New Mountain Street<br>Forest Park, FP 11220</p>
+              <p>Alhaji Ede, Igando Lasu Road<br>Lagos, Nigeria</p>
               <a href="#">View on Google Maps</a>
             </div>
           </div>
@@ -182,17 +182,17 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
-    <div id="map">
-<!-- How to change your own map point
+    <!-- <div id="map">
+ How to change your own map point
 	1. Go to Google Maps
 	2. Click on your location point
 	3. Click "Share" and choose "Embed map" tab
 	4. Copy only URL and paste it within the src="" field below
--->
-      <iframe src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
 
-    <div class="partners contact-partners">
+      <iframe src="https://maps.google.com/maps?q=Av.+Lúcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div> -->
+
+    <!-- <div class="partners contact-partners">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -204,11 +204,11 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <!-- Footer Starts Here -->
-    <footer>
+    <!-- <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-item">
@@ -273,7 +273,7 @@ https://templatemo.com/tm-545-finance-business
         </div>
       </div>
     </footer>
-    
+     -->
     <div class="sub-footer">
       <div class="container">
         <div class="row">
