included technology in slide

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="item item-2">
             <div class="img-fill">
                 <div class="text-content">
-                  <h6>our support leads to limitless opportunities for growth</h6>
+                  <h6>Dive into our world of inspirational solutions backed with technology</h6>
                   <h4>139% increase in revenue, asset base recorded 574% increase</h4>
                   <!-- <p>You are allowed to use this template for your company websites. You are NOT allowed to re-distribute this template ZIP file on any template download website. Please contact TemplateMo for more detail.</p> -->
                   <a href="services.html" class="filled-button">our services</a>
