carousel fix and corrections sent as pdf

--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@ https://templatemo.com/tm-545-finance-business
                     <div class="row">
                         <div class="col-md-6 align-self-center">
                             <div class="right-content">
-                                <span>our solid background on finance</span>
+                                <!-- <span>our solid background on finance</span> -->
                                 <h2>Get to know about <em>our company</em></h2>
                                 <p> We are a business growth consulting firm specializing in comprehensive business health
                                     assessments.
@@ -297,9 +297,7 @@ https://templatemo.com/tm-545-finance-business
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>Copyright &copy; 2020 Financial Business Co., Ltd.
-
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+          <p>Copyright &copy; 2024 Sweez Nigeria Company. 
         </div>
       </div>
     </div>
