--- a/services.html
+++ b/services.html
@@ -99,7 +99,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <h1>Our Services</h1>
-            <span>we are Trusted Experts providing excellent solutions</span>
+            <span>we are Trusted Experts providing excellent inspirational solutions</span>
           </div>
         </div>
       </div>
@@ -282,9 +282,7 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
-            
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+            <p>Copyright &copy; 2024 Sweez Nigeria Company. 
           </div>
         </div>
       </div>
