--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-545-finance-business
   <!-- ***** Preloader End ***** -->
 
   <!-- Header -->
-  <div class="sub-header">
+  <!-- <div class="sub-header">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-xs-12">
@@ -62,7 +62,7 @@ https://templatemo.com/tm-545-finance-business
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <header class="">
     <nav class="navbar navbar-expand-lg">
@@ -90,9 +90,9 @@ https://templatemo.com/tm-545-finance-business
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="one-page.html">One Page</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
