--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2 style="padding-top: 30px;">Give us a try, and you'll keep coming back... <br> <em>Send us a Message</em></h2>
+              <h2 style="padding-top: 30px;">Send us a <em>Message</em></h2>
               <!-- <span>Etiam suscipit ante a odio consequat</span> -->
             </div>
           </div>
