--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@ https://templatemo.com/tm-545-finance-business
     <!-- ***** Preloader End ***** -->
 
     <!-- Header -->
-    <div class="sub-header">
+    <!-- <div class="sub-header">
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-xs-12">
@@ -59,7 +59,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     
     <header class="">
       <nav class="navbar navbar-expand-lg">
@@ -84,9 +84,9 @@ https://templatemo.com/tm-545-finance-business
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="one-page.html">One Page</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
