bus image added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Optimize your business operations with our expert services, including Business Health Check, Market Analysis, Accounting, Forensic Accounting, Due Diligence Procurement, and Project Management.">
+    <meta name="keywords" content="business health check, market analysis, accounting services, forensic accounting, due diligence, procurement, project management, financial services, business optimization">
+    <meta name="author" content="Sweez">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Professional Business Solutions | Your Company Name">
+    <meta property="og:description" content="Explore services like Business Health Check, Market Analysis, and Project Management to enhance your company's efficiency and growth potential.">
+    <meta property="og:image" content="https://yourwebsite.com/images/preview.jpg">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
+    <!-- <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Professional Business Solutions | Your Company Name">
+    <meta name="twitter:description" content="Explore services like Business Health Check, Market Analysis, and Project Management to enhance your company's efficiency and growth potential.">
+    <meta name="twitter:image" content="https://yourwebsite.com/images/preview.jpg"> -->
+    
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Sweez</title>
+    <title>Sweez | Business Health Check, Forensic Accounting, & Project Management</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -549,7 +562,7 @@
       </div>
     </div> -->
 
-
+    
     <!-- Footer Starts Here -->
     <!-- <footer>
       <div class="container">
