Forward Program added to the nav bar

--- a/about.html
+++ b/about.html
@@ -160,7 +160,17 @@ https://templatemo.com/tm-545-finance-business
     </div>
 </div>
 
-<div class="wraper">
+<div class="media-section">
+  <div class="media-image">
+      <img src="assets/images/green-branded-bus.png" alt="Bus Image">
+  </div>
+  <div class="media-content">
+      <h2>Our Collaboration</h2>
+      <p>Our long year's collaboration with the media communication industry makes your company's products and services a show in our hands for a stronger impact.</p>
+  </div>
+</div>
+
+<!-- <div class="wraper">
   <div class="container">
       <input type="radio" name="slide" id="c1" checked>
       <label for="c1" class="card">
@@ -206,7 +216,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
       </label>
   </div>
-</div>
+</div> -->
 
 
 
