--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@ https://templatemo.com/tm-545-finance-business
             <div class="contact-item">
               <i class="fa fa-map-marker"></i>
               <h4>Location</h4>
-              <p>Alhaji Ede, Igando Lasu Road<br>Lagos, Nigeria</p>
+              <p><br>Lagos, Nigeria</p>
               <a href="#">View on Google Maps</a>
             </div>
           </div>
