--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Forward Program</a>
+                <a class="nav-link" href="forward.html">Forward Program</a>
               </li>
             </ul>
           </div>
